syntax = "proto3";

package protodata;

service Code {
  rpc Search (SearchRequest) returns (SearchResponse) {}
}

message SearchRequest {
  string text = 1;
}

message SearchResponse {
  repeated CodeDetail data = 1;
}

message CodeDetail {
  int64 id = 1;
  string title = 2;
  string lang = 3;
  string tags = 4;
  string content = 5;
}
